macviews: use mac-y focus rings

This change:
1) Uses the system focus ring color even when SecondaryUiMd is enabled
2) Moves focus ring thickness and inset out to PlatformStyle
3) Adds Mac overrides of the default values

Bug: 832306
Change-Id: I6c18d9d0431dc411a5cb95f9c0639e41f4aa1127
Reviewed-on: https://chromium-review.googlesource.com/1012163
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551030}
Former-commit-id: 1af8d3ffcdec96999a970c108b85586bb6f65746