ui/native_theme/native_theme_mac.mm
@@ -160,6 +160,12 @@ SkColor NativeThemeMac::GetSystemColor(ColorId color_id) const {
     case kColorId_LabelTextSelectionBackgroundFocused:
     case kColorId_TextfieldSelectionBackgroundFocused:
       return NSSystemColorToSkColor([NSColor selectedTextBackgroundColor]);
+
+    case kColorId_FocusedBorderColor:
+      return NSSystemColorToSkColor([NSColor keyboardFocusIndicatorColor]);
+    case kColorId_UnfocusedBorderColor:
+      return NSSystemColorToSkColor([NSColor controlColor]);
+
     default:
       break;
   }
